# FilterFS

./: LICENSE  README.md  README.rst  filtersFS.py  pyproject.toml  setup.cfg  setup.py
filterfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: filtersFS.py
src/filters_package/: filtersFS.py
src/filters_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_filterfs.py
